ADM-feat-40a8.11: Added WHOIS link on user IP in user list table. WHOIS provider URL is configurable via server settings

--- a/design/templates/OpenGame/admin/settings.tpl.html
+++ b/design/templates/OpenGame/admin/settings.tpl.html
@@ -388,6 +388,10 @@
       <th><label for="game_counter">{L_adm_opt_game_counter}</label></th>
       <th><input name="game_counter" id="game_counter" type="checkbox" value="1"<!-- IF GAME_COUNTER --> checked<!-- ENDIF --> /></th>
     </tr>
+    <tr>
+      <th><label for="geoip_whois_url">{L_adm_opt_geoip_whois_url}</label></th>
+      <th><input name="geoip_whois_url" id="geoip_whois_url" size="53" maxlength="254" value="{C_geoip_whois_url}" type="text"></th>
+    </tr>
 
     <tr><td class="c" colspan="2">{L_adm_opt_chat}</td></tr>
     <tr>
