--- a/design/templates/OpenGame/metamatter.tpl.html
+++ b/design/templates/OpenGame/metamatter.tpl.html
@@ -3,7 +3,7 @@
 
 <!-- IF ! $TABLE_WIDTH -->
   <!-- DEFINE $TABLE_WIDTH = '519px' -->
-  <h2>{PAGE_HEADER}</h2>
+  <h1>{PAGE_HEADER}</h1>
 <!-- ENDIF -->
 
 <!-- INCLUDE _result_message -->
@@ -22,10 +22,56 @@
 <table width="{$TABLE_WIDTH}">
   <tr class="c_j">
     <th>
-      {L_sys_metamatter_what_header}
+      <span style="font-size: 1.8em">{L_sys_dark_matter_what_header}</span>
+      <button class="fr" onclick="sn_show_hide(this, 'dark_matter_what_it_is');"><span class="link_action">{L_sys_show}</span></button>
     </th>
   </tr>
+  <tr class="c_j" id="dark_matter_what_it_is" style="display: none;">
+    <td>
+      <div style="display: table-row; position: relative; margin: 7px;">
+        <img src="design/images/DMaterie.jpg" align="top" border="0" height="120" width="120" class="fl" style="margin-right: 7px;">
+        {DARK_MATTER_DESCRIPTION}
+        <!-- IF PAYMENT_AVAILABLE -->
+        <div class="ok">{L_sys_dark_matter_obtain_text_convert}</div>
+        <!-- ENDIF -->
+      </div>
+    </td>
+  </tr>
+
+  <tr>
+    <th class="c_l">
+      <span style="font-size: 1.8em">{L_sys_dark_matter_description_header}</span>
+      <button class="fr" onclick="sn_show_hide(this, 'dark_matter_usage');"><span class="link_action">{L_sys_show}</span></button>
+    </th>
+  </tr>
+  <tr class="c_j" id="dark_matter_usage" style="display: none;">
+    <td>
+      {L_sys_dark_matter_description_text}
+    </td>
+  </tr>
+
   <tr class="c_j">
+    <th>
+      <span style="font-size: 1.8em">{L_sys_dark_matter_obtain_header}</span>
+      <button class="fr" onclick="sn_show_hide(this, 'dark_matter_obtain');"><span class="link_action">{L_sys_show}</span></button>
+    </th>
+  </tr>
+  <tr class="c_j" id="dark_matter_obtain" style="display: none;">
+    <td>
+      {L_sys_dark_matter_obtain_text}
+    </td>
+  </tr>
+
+</table>
+
+<table width="{$TABLE_WIDTH}">
+  <tr class="c_j">
+    <th>
+      <span style="font-size: 1.8em">{L_sys_metamatter_what_header}</span>
+      <button class="fr" onclick="sn_show_hide(this, 'metamatter_what_description');"><span class="link_action">{L_sys_show}</span></button>
+    </th>
+  </tr>
+  <tr class="c_j" id="metamatter_what_description" style="display: none;">
     <td>
       <div style="display: table-row; position: relative; margin: 7px;">
         <img src="design/images/metamatter.jpg" align="top" border="0" height="120" width="120" class="fl" style="margin-right: 7px;">
@@ -34,26 +80,26 @@
     </td>
   </tr>
 
-  <tr class="c_j">
-    <th>
-      {L_pay_mm_convert_header}
-    </th>
-  </tr>
-  <tr class="c_j">
-    <td valign="middle">
-      {L_pay_mm_convert_text}<br />
-      <!-- IF METAMATTER == 0 -->
-        {L_pay_mm_convert_no_mm}
-      <!-- ELSE -->
-        <form action="metamatter.php" method="POST">
-          {L_pay_mm_convert_prefix}
-          <input type="text" name="mm_convert" value="0" />
-          {L_pay_mm_convert_suffix}
-          <input type="submit" name="mm_convert_do" value="{L_pay_mm_convert_do}"/>
-        </form>
-      <!-- ENDIF -->
-    </td>
-  </tr>
+  <!--<tr class="c_j">-->
+    <!--<th>-->
+      <!--{L_pay_mm_convert_header}-->
+    <!--</th>-->
+  <!--</tr>-->
+  <!--<tr class="c_j">-->
+    <!--<td valign="middle">-->
+      <!--{L_pay_mm_convert_text}<br />-->
+      <!--&lt;!&ndash; IF METAMATTER == 0 &ndash;&gt;-->
+        <!--{L_pay_mm_convert_no_mm}-->
+      <!--&lt;!&ndash; ELSE &ndash;&gt;-->
+        <!--<form action="metamatter.php" method="POST">-->
+          <!--{L_pay_mm_convert_prefix}-->
+          <!--<input type="text" name="mm_convert" value="0" />-->
+          <!--{L_pay_mm_convert_suffix}-->
+          <!--<input type="submit" name="mm_convert_do" value="{L_pay_mm_convert_do}"/>-->
+        <!--</form>-->
+      <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
+    <!--</td>-->
+  <!--</tr>-->
 
   <!-- IF FALSE && (.exchange || .discount) -->
   <tr class="c_j">
@@ -61,7 +107,7 @@
       <table class="markup" width="100%">
         <tr>
           <th class="c_l">{L_pay_mm_bonus_header}</th>
-          <th class="c_r link_action" onclick="sn_show_hide(this, 'exchange_and_bonuses');">[ {L_sys_show} ]</th>
+          <th class="c_r link_action" onclick="sn_show_hide(this, 'exchange_and_bonuses');">{L_sys_show}</th>
         </tr>
       </table>
     </th>
@@ -72,7 +118,7 @@
       <table class="markup" width="100%">
         <tr>
           <td>{L_pay_currency_exchange_title}</td>
-          <!--<td class="c_r"><span class="link_action" onclick="sn_show_hide(this, 'currency_exchange');">[ {L_sys_show} ]</span></td>-->
+          <!--<td class="c_r"><span class="link_action" onclick="sn_show_hide(this, 'currency_exchange');">{L_sys_show}</span></td>-->
         </tr>
         <tr id="currency_exchange">
         <!--<tr id="currency_exchange" style="display: none;">-->
@@ -107,7 +153,7 @@
       <table class="markup" width="100%">
         <tr>
           <td>{L_pay_mm_bonus}</td>
-          <!--<td class="c_r"><span class="link_action" onclick="sn_show_hide(this, 'bonuses');">[ {L_sys_show} ]</span></td>-->
+          <!--<td class="c_r"><span class="link_action" onclick="sn_show_hide(this, 'bonuses');">{L_sys_show}</span></td>-->
         </tr>
       </table>
       <!--<ul id="bonuses" style="display: none;">-->
@@ -124,11 +170,14 @@
 
   <tr class="c_j">
     <th>
-      {L_pay_mm_buy}
+      <span style="font-size: 1.8em">{L_pay_mm_buy}</span>
     </th>
   </tr>
   <tr class="c_j">
     <td>
+      <div style="display: table-row; position: relative; margin: 7px;">
+        {L_sys_metamatter_what_purchase}
+      </div><br />
       <!-- IF .payment -->
         <!-- IF ! PAY_LINK_URL -->
         <form action="{D_SN_ROOT_VIRTUAL}metamatter.php" method="POST" id="payment_form">
@@ -139,7 +188,7 @@
         <!-- ENDIF -->
 
         <!-- IF ! UNIT_AMOUNT -->
-          {L_pay_mm_buy_text_cost} {PAYMENT_CURRENCY_EXCHANGE_DEFAULT} {L_sys_metamatter_sh}
+          {L_pay_mm_buy_text_cost} {PAYMENT_CURRENCY_EXCHANGE_DEFAULT} <span class="metamatter">{L_sys_metamatter_sh}</span>
           {L_pay_mm_buy_text_unit}
           <select name="player_currency" id="player_currency" class="notice">
             <!-- BEGIN exchange -->
@@ -202,8 +251,9 @@
                 <!-- BEGIN method -->
                   <!-- IF method.S_ROW_COUNT == 6 -->
                   <div>
-                    {L_pay_mm_buy_payment_method_more}
-                    <span class="link_action fr" onclick="sn_show_hide(this, 'hide_payment_id_{payment.ID}');">[ {L_sys_show} ]</span>
+                    {L_pay_mm_buy_payment_method_more}<br />
+                    <!--<span class="link_action fr" onclick="sn_show_hide(this, 'hide_payment_id_{payment.ID}');">{L_sys_show}</span>-->
+                    <button onclick="sn_show_hide(this, 'hide_payment_id_{payment.ID}');"><span class="link_action">{L_sys_show}</span></button>
                   </div>
                   <div id="hide_payment_id_{payment.ID}" style="display: none; clear: both;">
                   <!-- ENDIF -->
@@ -276,7 +326,8 @@
         <!-- IF ! PAY_LINK_URL -->
           <input class="fl" type="submit" value="{L_pay_mm_buy_confirm}">
         <!-- ELSEIF PAY_LINK_METHOD == 'GET' || PAY_LINK_METHOD == 'POST' -->
-          <input class="fl" type="submit" value="{L_pay_mm_buy_pay}">
+          <!--<input class="fl" type="submit" value="{L_pay_mm_buy_pay}">-->
+          <button class="fl" type="submit">{L_pay_mm_buy_pay}</button>
         <!-- ELSEIF PAY_LINK_METHOD == 'LINK' -->
           <script type="text/javascript">
             function make_payment_popup() {
