PAY-fix-40a9.2: Fixed purchase error via xsolla

--- a/design/templates/OpenGame/metamatter.tpl.html
+++ b/design/templates/OpenGame/metamatter.tpl.html
@@ -348,7 +348,7 @@
             payment_popup = new make_payment_popup;
           </script>
 
-          <input class="fl" type="button" value="{L_pay_mm_buy_pay}" onclick="payment_popup.open(this);return false;">
+          <button class="fl" type="button" onclick="payment_popup.open(this);return false;">{L_pay_mm_buy_pay}</button>
         <!-- ENDIF -->
 
         </form>
