--- a/design/templates/OpenGame/fleet_miniatures.tpl.html
+++ b/design/templates/OpenGame/fleet_miniatures.tpl.html
@@ -28,7 +28,7 @@
   <!-- ENDIF -->
 
   <div id="unit_miniatures_container"><!-- BEGIN ships -->
-    <div id="unit_miniatures_wrapper">
+    <div class="unit_miniatures_wrapper">
       <img src="{dpath}gebaeude/{ships.ID}.gif" style="width: 100%; height: 100%;"/>
       <!--<img id="unit_info_image" />-->
       <div id="unit_info_name" class="a75">{ships.NAME}</div>
