--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -193,7 +193,7 @@
               <span style="position: absolute; right: 0; bottom: 1.2em;" class="icon_alpha dark_matter">{TOPNAV_DARK_MATTER_PLAIN_TEXT}</span>
               <span style="position: absolute; left: 0; bottom: 1.75em;" class="icon_alpha ok">+</span>
               <!-- ENDIF -->
-              <span style="position: absolute; right: 0; bottom: 0; border-top: 2px solid;<!-- IF TOPNAV_METAMATTER --><!-- ENDIF -->" class="icon_alpha ok">{TOPNAV_DARK_MATTER_TEXT}</span>
+              <span style="position: absolute; right: 0; bottom: 0;<!-- IF TOPNAV_METAMATTER -->border-top: 2px solid;<!-- ENDIF -->" class="icon_alpha ok">{TOPNAV_DARK_MATTER_TEXT}</span>
             </a>
           </div>
 
