AUTH-misc-40a10.25: AuthV4 Alpha4.8

--- a/design/templates/OpenGame/login_player_register.tpl.html
+++ b/design/templates/OpenGame/login_player_register.tpl.html
@@ -21,7 +21,7 @@
 
     <div id="player_register_logout">
       {L_login_player_register_logout_description}<br/>
-      <button type="submit" id="login_player_register_logout" name="login_player_register_logout">
+      <button type="submit" id="login_player_register_logout" name="login_player_register_logout" value="1">
         {L_login_player_register_logout}
       </button>
     </div>
