--- a/design/templates/OpenGame/_global_footer.tpl.html
+++ b/design/templates/OpenGame/_global_footer.tpl.html
@@ -7,5 +7,8 @@
     </table>
 
     <div id="debug" style="text-align: left"></div>
+    <script type="application/javascript">
+      document_ready();
+    </script>
   </body>
 </html>
