--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -237,8 +237,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
   width: 100%;
 }
 
-
-@media only screen and (max-width : 51.9375em) { /* 831px */
+@media only screen and (max-width : 51.9375em) { /* 831px and less*/
   #unit_table { /* 3 preview */
     width: 37em;
   }
@@ -248,6 +247,12 @@ only screen and (min-device-pixel-ratio : 1.5) {
     /*margin-top: 3em;*/
     /*margin-right: 5em;*/
     margin: 2em 5em 1em;
+  }
+  #unit_miniatures_container {
+    max-width: 55em;
+  }
+  .fleet_2_table { /* Table on Fleet Mission Select*/
+    max-width: 34em;
   }
 }
 @media only screen and (min-width : 52em) { /* 832px */
@@ -259,6 +264,12 @@ only screen and (min-device-pixel-ratio : 1.5) {
   }
   #shoutbox tr > td:nth-child(2) {
     margin-top: 0.4em;
+  }
+  #unit_miniatures_container {
+    max-width: 66em;
+  }
+  .fleet_2_table {
+    max-width: 45em;
   }
 }
 @media only screen and (min-width : 60em) { /* 960px */
@@ -294,15 +305,12 @@ only screen and (min-device-pixel-ratio : 1.5) {
     float: left;
     display: block;
   }
-  /*#chat_message_inputs #send {*/
-    /*float: right;*/
-  /*}*/
-  /*#shoutbox tr > td:first-child {*/
-    /*margin-top: 0;*/
-  /*}*/
-  /*#shoutbox tr > td:last-child {*/
-    /*margin-bottom: 0;*/
-  /*}*/
+  #unit_miniatures_container {
+    max-width: 77em;
+  }
+  .fleet_2_table { /* Table on Fleet Mission Select*/
+    max-width: 56em;
+  }
 }
 @media only screen and (min-width : 68em) { /* 1088px */
   #unit_table { /* 6 preview */
@@ -352,12 +360,51 @@ only screen and (min-device-pixel-ratio : 1.5) {
     display: table-cell;
     /*vertical-align: top;*/
   }
+  #unit_miniatures_container {
+    max-width: 88em;
+  }
+  .fleet_2_table { /* Table on Fleet Mission Select*/
+    max-width: 66em;
+  }
 }
 @media only screen and (min-width : 76.5em) { /* 1224px */
   #unit_table { /* 7 preview */
     width: 84.5em;
   }
+  #unit_miniatures_container {
+    max-width: 110em;
+  }
+  .fleet_2_table { /* Table on Fleet Mission Select*/
+    max-width: 77em;
+  }
 }
+
+.fleet_mission_button_container {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0.2em;
+  /*border: 1px solid white;*/
+  width: 10em;
+  height: 9em;
+}
+
+.fleet_expedition_warning {
+  font-size: 1.5em;
+  margin: 0.5em;
+}
+
+.mission_button_image {
+  border: 0.2em solid #344566;
+  height: 5.818181818182rem;
+  width: 5.818181818182rem;
+}
+
+.mission_button_passive {
+  filter: alpha(Opacity=50);
+  opacity: 0.5;
+  border: 0;
+}
+
 
 #unit_info_extra_switch_wrapper {
   /*display: table-row-group;*/
@@ -365,7 +412,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 
 #unit_miniatures_container {
   display: inline-block;
-  max-width: 53em;
+  /*max-width: 53em;*/
   font-size: 0.8em;
   text-align: center;
   align-content: center;
