AUTH-misc-40a11.8: AuthV4 Alpha4.8.7

--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -232,14 +232,14 @@
 
 <div id="admin_message"></div>
 
-<script type="text/javascript"><!--
-  jQuery(document).bind("ready", function() {
-    // send requests
-    jQuery.post("scheduler.php", {rating: jQuery(this).html()}, function(xml) {
-      // format result
-      var result = [ jQuery("message", xml).text() ];
-      // output result
-      jQuery("#admin_message").html(result.join(""));
-    } );
-  });
---></script>
+<script type="text/javascript">
+//  jQuery(document).bind("ready", function() {
+//    // send requests
+//    jQuery.post("scheduler.php", {rating: jQuery(this).html()}, function(xml) {
+//      // format result
+//      var result = [ jQuery("message", xml).text() ];
+//      // output result
+//      jQuery("#admin_message").html(result.join(""));
+//    } );
+//  });
+</script>
