--- a/design/templates/OpenGame/eco_queue.tpl.html
+++ b/design/templates/OpenGame/eco_queue.tpl.html
@@ -18,11 +18,12 @@
 sn_timers.unshift({'id': '{$QUE_HTML}_{$QUE_ID}', 'type': 3, 'active': true, 'start_time': {TIME_NOW}, 'options': {
   'msg_done': '{LA_eco_que_empty}',
   // 'url': document.location.href,
-  'template': '<div class="que_item fl" title="[UNIT_NAME]">\
+  'template': '<div class="que_item fl" title="[UNIT_NAME] ([UNIT_LEVEL])">\
     <span class="unit_picture"><img src="{D_SN_ROOT_VIRTUAL}{dpath}gebaeude/[UNIT_ID].gif" align="top" width="100%" height="100%"></span>\
-    <span style="position: absolute; top: 0px; left: 0px; width: 100%; height: 2ex; font-size: 100%;" class="icon_alpha">[UNIT_LEVEL]</span>\
-    <span style="position: absolute; bottom: 0px; left: 0px; width: 100%; font-size: 100%;" class="icon_alpha">[UNIT_TIME]</span>\
+    <span class="icon_alpha que_unit_level {$QUE_HTML}_{$QUE_ID}_level_[UNIT_QUE_PLACE]">[UNIT_LEVEL]</span>\
+    <span class="icon_alpha que_unit_time {$QUE_HTML}_{$QUE_ID}_timer_[UNIT_QUE_PLACE] que_item_[UNIT_QUE_PLACE]">[UNIT_TIME]</span>\
   </div>',
+//<span class="icon_alpha {$QUE_HTML}_{$QUE_ID}_seconds_[UNIT_QUE_PLACE] que_unit_time_seconds_[UNIT_QUE_PLACE]"></span>\
   'que': [<!-- BEGIN que --><!-- IF $QUE_ID == que.QUE  -->
     ['{que.ID}', '{que.NAME}', {que.TIME}, {que.AMOUNT}, {que.LEVEL}, {que.TIME_FULL}],
   <!-- ENDIF --><!-- END que -->]
