--- a/skins/supernova-ivash/skin.css
+++ b/skins/supernova-ivash/skin.css
@@ -16,97 +16,58 @@
                                   ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 */
 
-body, form, table, input, select {
-  font-family : Tahoma, sans-serif;
-}
-
-form, table, tr, td, input, select {
-  font-size : 1em;
-}
-
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
-  /* Styles */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 }
 
 /* Smartphones (landscape) ----------- */
-@media only screen
-and (min-width : 321px) {
-  /* Styles */
+@media only screen and (min-width : 321px) {
 }
 
 /* Smartphones (portrait) ----------- */
-@media only screen
-and (max-width : 320px) {
-  /* Styles */
+@media only screen and (max-width : 320px) {
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px) {
-  /* Styles */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
 }
 
 /* iPads (landscape) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : landscape) {
-  /* Styles */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
 }
 
 /* iPads (portrait) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : portrait) {
-  /* Styles */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
 }
 
 /* Desktops and laptops medium-res */
-@media only screen
-and (min-width : 760px) {
-  /* Styles */
-  body
-  {
+@media only screen and (min-width : 760px) {
+  body {
     background-image     : url(img/background_medium.jpg);
   }
 }
 
 /* Desktops and laptops ----------- */
-@media only screen
-and (min-width : 1224px) {
-  /* Styles */
-  body
-  {
+@media only screen and (min-width : 1224px) {
+  body {
     background-image     : url(img/background.jpg);
   }
 }
 
 /* Large screens ----------- */
-@media only screen
-and (min-width : 1824px) {
-  /* Styles */
-  body
-  {
+@media only screen and (min-width : 1824px) {
+  body {
     background-image     : url(img/background.jpg);
   }
 }
 
 /* iPhone 4+ ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-  /* Styles */
+@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
 }
 
-body
-{
+body {
   color                : #E6EBFB;
-  margin-top           : 5px;
-  margin-left          : 1px;
+  /*margin-top           : 5px;*/
+  /*margin-left          : 1px;*/
   background-color     : #80605D;
   background-attachment: fixed;
   background-repeat    : no-repeat;
@@ -121,57 +82,24 @@ body
   scrollbar-shadow-color: #80605D;
 }
 
-img
-{
-  border               : 0px;
-}
-
-input, select, textarea, div.z
-{
+input, select, textarea, div.z {
  color                : #D58000;
 }
 
-textarea
-{
-  width                : 98%;
-}
-
-th, td, input, select, textarea
-{
-  border               : 1px 	#483634 solid;
+th, td, input, select, textarea {
+  border               : 1px #483634 solid;
   background-color     : #242424;
   padding-left         : 3px;
   padding-right        : 3px;
   font-weight          : bold;
 }
 
-th.c_l, th.c_r, th.c_c, tr.c_l th, tr.c_r th, tr.c_c th, td.c
-{
+th.c_l, th.c_r, th.c_c, tr.c_l th, tr.c_r th, tr.c_c th, td.c {
   font-weight          : bold;
   background-image     : url("img/bg1.gif");
 }
-/*
-th, td.c_l, td.c_c, tr.c_l td, tr.c_r td, tr.c_c td
-{
-  text-align           : center;
-}
-*/
-/*
-.c_c, th.c_c, td.c_c, tr.c_c td, tr.c_c th, .cell_center, tr.cell_center td, tr.cell_center th
-{
-  text-align: center;
-}
 
-.c_l, th.c_l, td.c_l, tr.c_l td, tr.c_l th, .cell_left, tr.cell_left td, tr.cell_left th, td.c
-{
-  text-align: left;
-}
 
-.c_r, th.c_r, td.c_r, tr.c_r td, tr.c_r th, .cell_right, tr.cell_right td, tr.cell_right th
-{
-  text-align: right;
-}
-*/
 td.l
 {
   vertical-align       : top;
@@ -179,63 +107,52 @@ td.l
   background-image     : url(img/bg2.gif);
 }
 
-table table
-{
-  border               : 0px;
+table table {
+  border               : 0;
 }
 
-body form table th table input
-{
+body form table th table input {
   width: 60px;
 }
 
-div.z
-{
+div.z {
   font-weight          : bold;
 }
 
-a
-{
+a {
   text-decoration      : none;
   font-weight          : bold;
 }
 
-a:hover
-{
+a:hover {
   color                : #80605D;
   text-decoration      : underline;
 }
 
-.style td
-{
-  border-top           : 0px;
+.style td {
+  border-top           : 0;
 }
 
-.style div a
-{
+.style div a {
   color                : #00AA00;
 }
 
-.style div a:link
-{
+.style div a:link {
   color                : #f2f2f2;
 }
 
-.style div a:visited
-{
+.style div a:visited {
   color                : #f2f2f2;
 }
 
-.style div a:hover
-{
+.style div a:hover {
   background-color     : #415680;
   text-decoration      : none;
 }
 
-h1
-{
+h1 {
   font-size            : 200%;
-  border-bottom        : 0px #F9C749 solid;
+  border-bottom        : 0 #F9C749 solid;
 
   margin-top: 16px;
 }
@@ -244,17 +161,15 @@ h1
   text-align: justify;
 }
 
-.ov_user_total {color: #FF0000}
-.ov_user_rank {color: #FFFF00}
-
-#left_menu {
-  font-weight: bold;
-  width: 140px; /* 100% */
+.ov_user_total {
+  color: #FF0000
+}
+.ov_user_rank {
+  color: #FFFF00
 }
 
 #left_menu #server_name {
   color: #00FF00;
-  font-weight: bold;
 }
 
 #left_menu th {
@@ -268,134 +183,75 @@ h1
   color: #999933;
 }
 
-#menu_admin
-{
+#menu_admin, #menu_news {
   color: lime;
 }
 
-#menu_planet_fleets, #menu_empire_fleets
-{
+#menu_planet_fleets, #menu_empire_fleets {
   color: #CC3333;
 }
 
-#menu_affiliates
-{
+#menu_affiliates, #menu_logout {
   color: #993333;
 }
 
-#menu_rules
-{
+#menu_rules {
   color: orange;
 }
 
-#menu_faq
-{
+#menu_faq {
   color: yellow;
 }
 
-#menu_news
-{
-  color: lime;
-}
 
-#menu_planet_structures /* .lm_buildings */
-{
+#menu_planet_structures {
   color: #669933;
 }
 
-#menu_planet_shipyard, #menu_planet_defense /* .lm_shipyard */
-{
+#menu_planet_shipyard, #menu_planet_defense {
   color: #993399;
 }
 
-#menu_empire_emperor, #menu_dark_matter
-{
+#menu_empire_emperor, #menu_dark_matter {
   color: purple
 }
 
-#menu_info_research, #menu_empire_techtree /* .lm_techtree */
-{
+#menu_info_research, #menu_empire_techtree {
   color: #999933;
 }
 
-#menu_empire_universe /* .lm_universe */
-{
+#menu_empire_universe {
   color: #999966;
 }
 
-#menu_ally_chat, #menu_comm_chat /* .lm_chatally, .lm_chat */
-{
+#menu_ally_chat, #menu_comm_chat {
   color: #996699;
 }
 
-#menu_comm_forum /* .lm_forum */
-{
+#menu_comm_forum {
   color: #0066CC;
 }
 
-#menu_utils_simulator /* .lm_simulator */
-{
+#menu_utils_simulator {
   color: #FF9966;
 }
 
-#menu_utils_search /* .lm_search */
-{
+#menu_utils_search {
   color: #887766;
 }
 
-#menu_options /* .lm_options */
-{
+#menu_options {
   color: #CCCC66;
 }
 
-#menu_logout /* .lm_logout */
-{
-  color: #993333;
-}
-
-.link {
-  text-decoration: underline;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-/*  Patching this theme for ui-slider */
-.style .ui-slider a:link { width: 1.2em; height: 1.2em; }
-.style .ui-slider a:hover { width: 1.2em; height: 1.2em; }
-
 /* Setting popup table background color */
-div .ui-dialog-content table { background: #344055; }
+div .ui-dialog-content table {
+  background: #344055;
+}
 
 /* Icon file */
-.icons { background-image: url(images/icons.png); }
-
-/* Que item */
-.que_item {
-  cursor: pointer;
-
-  border: 0;
-
-  position: relative;
-  height: 5.5em;
-  width: 5.5em;
-
-  margin-right: 0.2em;
-  margin-bottom: 0.2em;
-
-  font-size: 1em;
-}
-
-/* Unit picture */
-.unit_picture
-{
-  border: 0px;
-
-  position: absolute;
-  left: 0px;
-  top: 0px;
-
-  width: 100%;
-  height: 100%;
+.icons {
+  background-image: url(images/icons.png);
 }
 
 /* Unit preview box on build pages */
