INT-feat-40a12.1: Reworked sn_timer again. Intermediate commit

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -283,7 +283,7 @@
   <!-- IF .flying_fleets -->
   sn_timers.unshift({'id': 'topnav_fleet_counter', 'type': 5, 'active': true, 'start_time': {TIME_NOW}, 'options': {
     'msg_done': '0',
-    'unchanged': false,
+    'changed': true,
     'que': [<!-- BEGIN flying_fleets -->
       [{flying_fleets.TIME}, '{flying_fleets.TEXT}', '{flying_fleets.HINT}'],
     <!-- END flying_fleets -->]
@@ -293,7 +293,7 @@
   <!-- IF .flying_expeditions -->
   sn_timers.unshift({'id': 'topnav_expedition_counter', 'type': 5, 'active': true, 'start_time': {TIME_NOW}, 'options': {
     'msg_done': '0',
-    'unchanged': false,
+    'changed': true,
     'que': [<!-- BEGIN flying_expeditions -->
       [{flying_expeditions.TIME}, '{flying_expeditions.TEXT}', '{flying_expeditions.HINT}'],
     <!-- END flying_expeditions -->]
